Demo Run in Notebooks
Added logo to pdf summaries
Saved all notebooks after being run on the demonstration datasets.

--- a/UsefulNotebooks/ModelViz_DT_GP.ipynb
+++ b/UsefulNotebooks/ModelViz_DT_GP.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_path = \"C:/Users/ryanu/Documents/Analysis/AutoMLPipe_Experiments/hcc_demo\"\n",
+    "experiment_path = \"C:/Users/ryanu/Documents/Analysis/STREAMLINE_Experiments/hcc_demo\"\n",
     "targetDataName = 'None' # 'None' if user wants to generate visualizations for all analyzed datasets\n",
     "inverseScaling = True #If standardscaling was applied, revert scaled decision boundaries to their original data values.\n",
     "bestOnly = False # Only generate viz. for best performing CV decision tree, otherwise generate one for each CV model.\n",
@@ -367,7 +367,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x28059ea2e80>"
+       "<graphviz.files.Source at 0x1c86a5a2e80>"
       ]
      },
      "execution_count": 7,
@@ -492,7 +492,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x28059e73190>"
+       "<graphviz.files.Source at 0x1c86a5725b0>"
       ]
      },
      "execution_count": 7,
@@ -671,7 +671,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x28059ea2ac0>"
+       "<graphviz.files.Source at 0x1c86a5a27f0>"
       ]
      },
      "execution_count": 7,
@@ -772,7 +772,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x28059e733d0>"
+       "<graphviz.files.Source at 0x1c86a572310>"
       ]
      },
      "execution_count": 7,
@@ -843,7 +843,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x28059ea2040>"
+       "<graphviz.files.Source at 0x1c86a5a2040>"
       ]
      },
      "execution_count": 7,
@@ -1049,7 +1049,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x28059e73cd0>"
+       "<graphviz.files.Source at 0x1c86a572d00>"
       ]
      },
      "execution_count": 7,
