--- a/UsefulNotebooks/GenerateModelFeatureImportanceHeatmap.ipynb
+++ b/UsefulNotebooks/GenerateModelFeatureImportanceHeatmap.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_path = \"C:/Users/ryanu/Documents/Analysis/AutoMLPipe_Experiments/hcc_demo\"\n",
+    "experiment_path = \"C:/Users/ryanu/Documents/Analysis/STREAMLINE_Experiments/hcc_demo\"\n",
     "targetDataName = 'None' # 'None' if user wants to generate visualizations for all analyzed datasets\n",
     "algorithms = [] #use empty list if user wishes re-evaluate all modeling algorithms that were run in pipeline."
    ]
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\ryanu\\\\Documents\\\\Analysis\\\\AutoMLPipe_Experiments\\\\hcc_demo\\\\hcc-data_example\\\\model_evaluation\\\\feature_importance\\\\FI_Rank_Heatmap.html'"
+       "'C:\\\\Users\\\\ryanu\\\\Documents\\\\Analysis\\\\STREAMLINE_Experiments\\\\hcc_demo\\\\hcc-data_example\\\\model_evaluation\\\\feature_importance\\\\FI_Rank_Heatmap.html'"
       ]
      },
      "execution_count": 5,
@@ -261,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\ryanu\\\\Documents\\\\Analysis\\\\AutoMLPipe_Experiments\\\\hcc_demo\\\\hcc-data_example_no_covariates\\\\model_evaluation\\\\feature_importance\\\\FI_Rank_Heatmap.html'"
+       "'C:\\\\Users\\\\ryanu\\\\Documents\\\\Analysis\\\\STREAMLINE_Experiments\\\\hcc_demo\\\\hcc-data_example_no_covariates\\\\model_evaluation\\\\feature_importance\\\\FI_Rank_Heatmap.html'"
       ]
      },
      "execution_count": 5,
