--- a/UsefulNotebooks/ModelViz_DT_GP.ipynb
+++ b/UsefulNotebooks/ModelViz_DT_GP.ipynb
@@ -367,7 +367,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x261dd2c6400>"
+       "<graphviz.files.Source at 0x1b2feba2e80>"
       ]
      },
      "execution_count": 7,
@@ -492,7 +492,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x261dd2fdf70>"
+       "<graphviz.files.Source at 0x1b2feb741f0>"
       ]
      },
      "execution_count": 7,
@@ -671,7 +671,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x261dd2c6d00>"
+       "<graphviz.files.Source at 0x1b2feba27f0>"
       ]
      },
      "execution_count": 7,
@@ -772,7 +772,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x261dd2fde50>"
+       "<graphviz.files.Source at 0x1b2feb74490>"
       ]
      },
      "execution_count": 7,
@@ -843,7 +843,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x261dd2c6fa0>"
+       "<graphviz.files.Source at 0x1b2feba2040>"
       ]
      },
      "execution_count": 7,
@@ -1130,7 +1130,7 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x261dd2fd6a0>"
+       "<graphviz.files.Source at 0x1b2feb748b0>"
       ]
      },
      "execution_count": 7,
