Other edits and housekeeping
Former-commit-id: 7126cafba512df4416f7ac6ef052a767837c48b6

--- a/STREAMLINE-Notebook.ipynb
+++ b/STREAMLINE-Notebook.ipynb
@@ -927,7 +927,39 @@
       "INFO:root:    class_weight: balanced\n",
       "INFO:root:    random_state: None\n",
       "INFO:root:hcc-data_example [CV_1] (RF) training complete. ------------------------------------\n",
-      "INFO:root:Running RF on /Users/bandheyh/Local/Cedars/UrbsLab/STREAMLINE_Dev/demo//hcc_demo/hcc-data_example_no_covariates/CVDatasets/hcc-data_example_no_covariates_CV_1_Train.csv\n"
+      "INFO:root:Running RF on /Users/bandheyh/Local/Cedars/UrbsLab/STREAMLINE_Dev/demo//hcc_demo/hcc-data_example_no_covariates/CVDatasets/hcc-data_example_no_covariates_CV_1_Train.csv\n",
+      "INFO:root:Best trial:\n",
+      "INFO:root:  Value: 0.7792582417582418\n",
+      "INFO:root:  Params: \n",
+      "INFO:root:    n_estimators: 839\n",
+      "INFO:root:    criterion: entropy\n",
+      "INFO:root:    max_depth: 28\n",
+      "INFO:root:    min_samples_split: 45\n",
+      "INFO:root:    min_samples_leaf: 2\n",
+      "INFO:root:    max_features: log2\n",
+      "INFO:root:    bootstrap: True\n",
+      "INFO:root:    oob_score: True\n",
+      "INFO:root:    class_weight: balanced\n",
+      "INFO:root:    random_state: None\n",
+      "INFO:root:hcc-data_example_no_covariates [CV_1] (RF) training complete. ------------------------------------\n",
+      "INFO:root:Running RF on /Users/bandheyh/Local/Cedars/UrbsLab/STREAMLINE_Dev/demo//hcc_demo/demodata/CVDatasets/demodata_CV_2_Train.csv\n",
+      "/Users/bandheyh/opt/anaconda3/envs/streamline/lib/python3.8/site-packages/sklearn/ensemble/_forest.py:584: UserWarning: Some inputs do not have OOB scores. This probably means too few trees were used to compute any reliable OOB estimates.\n",
+      "  warn(\n",
+      "INFO:root:Best trial:\n",
+      "INFO:root:  Value: 0.728403540903541\n",
+      "INFO:root:  Params: \n",
+      "INFO:root:    n_estimators: 225\n",
+      "INFO:root:    criterion: gini\n",
+      "INFO:root:    max_depth: 11\n",
+      "INFO:root:    min_samples_split: 15\n",
+      "INFO:root:    min_samples_leaf: 25\n",
+      "INFO:root:    max_features: log2\n",
+      "INFO:root:    bootstrap: True\n",
+      "INFO:root:    oob_score: True\n",
+      "INFO:root:    class_weight: balanced\n",
+      "INFO:root:    random_state: None\n",
+      "INFO:root:demodata [CV_2] (RF) training complete. ------------------------------------\n",
+      "INFO:root:Running RF on /Users/bandheyh/Local/Cedars/UrbsLab/STREAMLINE_Dev/demo//hcc_demo/hcc-data_example/CVDatasets/hcc-data_example_CV_2_Train.csv\n"
      ]
     }
    ],
