Push all code for remote pull
Former-commit-id: 2dd79bd84f81292fe3f55ec5592983f5998496dd

--- a/STREAMLINE-Notebook.ipynb
+++ b/STREAMLINE-Notebook.ipynb
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,37 @@
       "INFO:root:    class_weight: balanced\n",
       "INFO:root:    random_state: None\n",
       "INFO:root:demodata [CV_2] (RF) training complete. ------------------------------------\n",
-      "INFO:root:Running RF on /Users/bandheyh/Local/Cedars/UrbsLab/STREAMLINE_Dev/demo//hcc_demo/hcc-data_example/CVDatasets/hcc-data_example_CV_2_Train.csv\n"
+      "INFO:root:Running RF on /Users/bandheyh/Local/Cedars/UrbsLab/STREAMLINE_Dev/demo//hcc_demo/hcc-data_example/CVDatasets/hcc-data_example_CV_2_Train.csv\n",
+      "INFO:root:Best trial:\n",
+      "INFO:root:  Value: 0.7248321123321124\n",
+      "INFO:root:  Params: \n",
+      "INFO:root:    n_estimators: 707\n",
+      "INFO:root:    criterion: gini\n",
+      "INFO:root:    max_depth: 16\n",
+      "INFO:root:    min_samples_split: 7\n",
+      "INFO:root:    min_samples_leaf: 9\n",
+      "INFO:root:    max_features: log2\n",
+      "INFO:root:    bootstrap: True\n",
+      "INFO:root:    oob_score: False\n",
+      "INFO:root:    class_weight: balanced\n",
+      "INFO:root:    random_state: None\n",
+      "INFO:root:hcc-data_example [CV_2] (RF) training complete. ------------------------------------\n",
+      "INFO:root:Running RF on /Users/bandheyh/Local/Cedars/UrbsLab/STREAMLINE_Dev/demo//hcc_demo/hcc-data_example_no_covariates/CVDatasets/hcc-data_example_no_covariates_CV_2_Train.csv\n",
+      "INFO:root:Best trial:\n",
+      "INFO:root:  Value: 0.7398046398046398\n",
+      "INFO:root:  Params: \n",
+      "INFO:root:    n_estimators: 161\n",
+      "INFO:root:    criterion: entropy\n",
+      "INFO:root:    max_depth: 27\n",
+      "INFO:root:    min_samples_split: 43\n",
+      "INFO:root:    min_samples_leaf: 7\n",
+      "INFO:root:    max_features: log2\n",
+      "INFO:root:    bootstrap: True\n",
+      "INFO:root:    oob_score: True\n",
+      "INFO:root:    class_weight: balanced\n",
+      "INFO:root:    random_state: None\n",
+      "INFO:root:hcc-data_example_no_covariates [CV_2] (RF) training complete. ------------------------------------\n",
+      "WARNING:root:RF Optimization Step, Time running: 4474.231698989868\n"
      ]
     }
    ],
@@ -994,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
