added most data process features except one hot encoding

--- a/STREAMLINE-GoogleColab.ipynb
+++ b/STREAMLINE-GoogleColab.ipynb
@@ -202,7 +202,8 @@
     "# Cutoffs\n",
     "categorical_cutoff = 10 # (int) Bumber of unique values after which a variable is considered to be quantitative vs categorical\n",
     "sig_cutoff = 0.05 # (float, 0-1) Significance cutoff used throughout pipeline\n",
-    "missingness_percentage = 0.3 # (float, 0-1) Missingness Percentage cutoff used throughout pipeline, percentage of missing values after which categorical featrure identifier is generated.\n",
+    "featureeng_missingness = 0.5 # (float, 0-1) Percentage of missing after which categorical featrure identifier is generated.\n",
+    "cleaning_missingness = 0.5 # (float, 0-1) Percentage of missing after instance and feature removal is performed.\n",
     "\n",
     "\n",
     "# Set Random Seed for Reproducible Analysis\n",
@@ -953,7 +954,7 @@
     "id": "Q-k3iBM190S6"
    },
    "source": [
-    "## Phase 1: Exploratory Analysis\n",
+    "## Phase 1: Data Processing Phase\n",
     "After cell runs, for each target dataset you will see:\n",
     "* A data count summary\n",
     "* Class balance barplot\n",
@@ -1178,8 +1179,8 @@
     }
    ],
    "source": [
-    "from streamline.runners.eda_runner import EDARunner\n",
-    "eda = EDARunner(data_path, output_path, experiment_name, \n",
+    "from streamline.runners.dataprocess_runner import DataProcessRunner\n",
+    "dpr = DataProcessRunner(data_path, output_path, experiment_name, \n",
     "                exploration_list=exploration_list, plot_list=plot_list,\n",
     "                class_label=class_label, instance_label=instance_label, \n",
     "                match_label=match_label, n_splits=n_splits, \n",
@@ -1188,9 +1189,10 @@
     "                categorical_features=categorical_feature_headers, \n",
     "                top_features=top_features,\n",
     "                categorical_cutoff=categorical_cutoff, sig_cutoff=sig_cutoff,\n",
-    "                missingness_percentage=missingness_percentage,\n",
+    "                featureeng_missingness=featureeng_missingness,\n",
+    "                cleaning_missingness=cleaning_missingness,\n",
     "                random_state=random_state, show_plots=True)\n",
-    "eda.run(run_parallel=False)"
+    "dpr.run(run_parallel=False)"
    ]
   },
   {
@@ -1199,7 +1201,7 @@
     "id": "BJBtvpO-CxMU"
    },
    "source": [
-    "## Phase 2: Data Preprocessing\n",
+    "## Phase 2: Scaling and Imputation\n",
     "After cell runs, you will see:\n",
     "* No output other than code progress updates"
    ]
@@ -1263,13 +1265,13 @@
     }
    ],
    "source": [
-    "from streamline.runners.dataprocess_runner import DataProcessRunner\n",
-    "dpr = DataProcessRunner(output_path, experiment_name, \n",
+    "from streamline.runners.imputation_runner import ImputationRunner\n",
+    "ir = ImputationRunner(output_path, experiment_name, \n",
     "                        scale_data=scale_data, impute_data=impute_data,\n",
     "                        multi_impute=multi_impute, overwrite_cv=overwrite_cv, \n",
     "                        class_label=class_label, instance_label=instance_label, \n",
     "                        random_state=random_state)\n",
-    "dpr.run(run_parallel=False)"
+    "ir.run(run_parallel=False)"
    ]
   },
   {
