Replication phase correction and notebook updates

--- a/STREAMLINE-GoogleColab.ipynb
+++ b/STREAMLINE-GoogleColab.ipynb
@@ -202,10 +202,6 @@
     "# Cutoffs\n",
     "categorical_cutoff = 10 # (int) Bumber of unique values after which a variable is considered to be quantitative vs categorical\n",
     "sig_cutoff = 0.05 # (float, 0-1) Significance cutoff used throughout pipeline\n",
-    "featureeng_missingness = 0.5 # (float, 0-1) Percentage of missing after which categorical featrure identifier is generated.\n",
-    "cleaning_missingness = 0.5 # (float, 0-1) Percentage of missing after instance and feature removal is performed.\n",
-    "\n",
-    "\n",
     "# Set Random Seed for Reproducible Analysis\n",
     "random_state = 42 # (int) Sets a specific random seed for reproducible results"
    ]
@@ -216,7 +212,7 @@
     "id": "60Pbh38acLlj"
    },
    "source": [
-    "### Run Parameters: Exploratory Analysis\n",
+    "### Run Parameters: Data Processing\n",
     "* Optionally, update these parameters to decide what analyses are run and outputs are produced by STREAMLINE in the exploratory analysis phase."
    ]
   },
@@ -245,7 +241,11 @@
     "plot_list = [\"Describe\", \"Univariate Analysis\", \"Feature Correlation\"] # (list of strings) Options:[\"Describe\", \"Univariate Analysis\", \"Feature Correlation\"]\n",
     "\n",
     "# univariate analysis plots (note: univariate analysis still output by default)\n",
-    "top_features = 20 # (int) Number of top features to report in notebook for univariate analysis"
+    "top_features = 20 # (int) Number of top features to report in notebook for univariate analysis\n",
+    "\n",
+    "featureeng_missingness = 0.5 # (float, 0-1) Percentage of missing after which categorical featrure identifier is generated.\n",
+    "cleaning_missingness = 0.5 # (float, 0-1) Percentage of missing after instance and feature removal is performed.\n",
+    "correlation_removal_threshold = 0.8"
    ]
   },
   {
@@ -254,7 +254,7 @@
     "id": "DBQP30iGpV6j"
    },
    "source": [
-    "### Run Parameters: Data Preprocessing\n",
+    "### Run Parameters: Scaling and Imputing\n",
     "* Optionally update these parameters to turn specific data preprocessing options on or off."
    ]
   },
@@ -1191,6 +1191,7 @@
     "                categorical_cutoff=categorical_cutoff, sig_cutoff=sig_cutoff,\n",
     "                featureeng_missingness=featureeng_missingness,\n",
     "                cleaning_missingness=cleaning_missingness,\n",
+    "                correlation_removal_threshold=correlation_removal_threshold,\n",
     "                random_state=random_state, show_plots=True)\n",
     "dpr.run(run_parallel=False)"
    ]
